# SmartNAS

./: .gitignore  CMakeLists.txt  README.md  main.cpp  server-env-setup
agent/: __init__.py  config.py  core_client.py  index_service.py  keyword_store.py  llm_client.py  markdown_service.py  rag_store.py  ranker.py  retrieval_service.py  schemas.py  service.py  sse.py  task_store.py
config/: config.json
docs/: agent-decoupling.md  agent-service.md  architecture.md  code-architecture.md  project-flow-tree.md
include/smartnas/api/: Router.h
include/smartnas/config/: AppConfig.h
include/smartnas/core/: FileManager.h  FileMetadata.h  User.h
include/smartnas/db/: DatabaseManager.h
include/smartnas/utils/: HashUtil.h
scripts/: agent_service.py  requirements-agent.txt  start_smartnas.sh  upload_corpus_to_smartnas.py
src/: main.cpp
src/api/: AgentMetadataHandlers.cpp  AuthHandlers.cpp  FileMutationHandlers.cpp  FileReadHandlers.cpp  FolderHandlers.cpp  Router.cpp  RouterInternal.cpp  RouterInternal.h  ShareHandlers.cpp  StaticHandlers.cpp  UploadHandlers.cpp
src/config/: AppConfig.cpp
src/core/: FileManager.cpp
src/db/: DatabaseManager.cpp  FileLookupRepository.cpp  FileMutationRepository.cpp  FileQueryRepository.cpp  FileWriteRepository.cpp  FolderRepository.cpp  ShareRepository.cpp  UserRepository.cpp
src/utils/: HashUtil.cpp
tests/: test_agent_modules.py  test_core_api.py
web/: index.html
web/css/: app.css
web/js/: bootstrap.js  chat.js  core.js  file-qa.js  files.js  operations.js  state.js  upload.js
